<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MeetingDoctors</string>
    <string name="meetingdoctors_locale">es</string>
    <string name="meetingdoctors_collegiate_number">Col.</string>
    <string name="meetingdoctors_home_schedule_1">Disponible hasta las %1$s</string>
    <string name="meetingdoctors_home_schedule_2">Me conectaré hoy a las %1$s</string>
    <string name="meetingdoctors_home_schedule_3">Me conectaré mañana a las %1$s</string>
    <string name="meetingdoctors_home_schedule_4">Me conectaré el %1$s a las %2$s</string>
    <string name="meetingdoctors_doctor_schedule_title">Horario</string>
    <string name="meetingdoctors_doctor_schedule_1">%1$s: de %2$s a %3$s</string>
    <string name="meetingdoctors_doctor_schedule_2">%1$s: de %2$s a %3$s y de %4$s a %5$s</string>
    <string name="meetingdoctors_doctor_schedule_3">De lunes a viernes de %2$s a %3$s</string>
    <string name="meetingdoctors_doctor_schedule_4">De lunes a viernes de %2$s a %3$s y de %4$s a %5$s</string>
    <string name="meetingdoctors_doctor_schedule_not_available">Horario no disponible</string>
    <string name="meetingdoctors_doctor_description_title">Descripción</string>
    <string name="meetingdoctors_chat_write_message_hint">Escribe aquí…</string>
    <string name="meetingdoctors_chat_send">Enviar</string>
    <string name="meetingdoctors_chat_writing">Escribiendo…</string>
    <string name="meetingdoctors_chat_offline_alert">En este momento no estoy disponible, puedes dejarme un mensaje y te responderé cuando vuelva a conectarme.</string>
    <string name="meetingdoctors_chat_delete_messages">Eliminar mensajes</string>
    <string name="meetingdoctors_chat_request_videocall">Solicitar Videollamada</string>
    <string name="meetingdoctors_chat_cancel_videocall">Cancelar solicitud de videollamada</string>
    <string name="meetingdoctors_chat_cancelled_vc_automessage">He cancelado la solicitud de videollamada.</string>
    <string name="meetingdoctors_chat_attachment_canceled">No se ha agregado ningun archivo</string>
    <string name="meetingdoctors_chat_pick_file_app_title">Seleccione Aplicación</string>
    <string name="meetingdoctors_chat_send_vc_automessage">Hola, me gustaría contactar contigo por videollamada.</string>
    <string name="meetingdoctors_chat_clear_dialog_title">Eliminar mensajes</string>
    <string name="meetingdoctors_chat_clear_dialog_body">Estás a punto de eliminar todos los mensajes de esta conversación, ¿Deseas continuar?</string>
    <string name="meetingdoctors_dialog_accept">Aceptar</string>
    <string name="meetingdoctors_dialog_cancel">Cancelar</string>
    <string name="meetingdoctors_chat_invitation_code_message">Para poder ver a tus profesionales debes\ntener un código de invitación. Si no lo tienes\ntodavía ponte en contacto con ellos para\nsolicitarlo.</string>
    <string name="meetingdoctors_chat_invitation_code_dialog_title">Introduce un código de invitación</string>
    <string name="meetingdoctors_chat_invitation_code_dialog_hint_text">Código</string>
    <string name="meetingdoctors_chat_invitation_code_dialog_accept_option_text">Enviar</string>
    <string name="meetingdoctors_chat_invitation_code_dialog_cancel_option_text">Salir</string>
    <string name="meetingdoctors_not_connected">No hay conexión</string>
    <string name="meetingdoctors_push_unread_messages">Tienes mensajes nuevos sin leer</string>
    <string name="meetingdoctors_navigation_drawer_open" translatable="false">Abrir menú</string>
    <string name="meetingdoctors_navigation_drawer_close" translatable="false">Cerrar menú</string>
    <string name="meetingdoctors_medical_history_title">Mi historial médico</string>
    <string name="meetingdoctors_medical_history_save">Guardar</string>
    <string name="meetingdoctors_medical_history_delete">Eliminar</string>
    <string name="meetingdoctors_medical_history_cancel">Cancelar</string>
    <string name="meetingdoctors_medical_history_required">Este campo es obligatorio</string>
    <string name="meetingdoctors_medical_history_delete_confirmation">¿Estás seguro que deseas eliminar este elemento?</string>
    <string name="meetingdoctors_medical_history_description">Este es tu historial médico, donde tanto tú como tu médico podéis añadir y modificar contenido. Es importante tenerlo actualizado para que podamos ayudarte mejor.</string>
    <string name="meetingdoctors_medical_history_my_documents">Mis documentos</string>
    <string name="meetingdoctors_medical_history_documents_description">Estos son todos tus documentos. Aquí vas a encontrar los informes de tus videollamadas, derivaciones o recetas electrónicas que te hayan prescrito nuestros profesionales.</string>
    <string name="meetingdoctors_medical_history_allergies">Alergias</string>
    <string name="meetingdoctors_medical_history_add_allergy_empty_info">Aún no has introducido\nninguna alergia</string>
    <string name="meetingdoctors_medical_history_add_allergy_button">AÑADIR ALERGIA</string>
    <string name="meetingdoctors_medical_history_allergies_description">Esta es la lista de tus alergias, donde tanto tú como tu médico podéis añadir y modificar contenido. Procura mantenerla actualizada para agilizar las consultas con los médicos.</string>
    <string name="meetingdoctors_medical_history_allergy_title">Alergia</string>
    <string name="meetingdoctors_medical_history_allergy_name_hint">Nombre del alérgeno*\n(ej.: polen)</string>
    <string name="meetingdoctors_medical_history_allergy_details_hint">Detalles</string>
    <string name="meetingdoctors_medical_history_allergy_severity">Gravedad:</string>
    <string name="meetingdoctors_medical_history_diseases">Enfermedades</string>
    <string name="meetingdoctors_medical_history_add_diseases_empty_info">Aún no has introducido\nninguna enfermedad</string>
    <string name="meetingdoctors_medical_history_add_diseases_button">AÑADIR ENFERMEDAD</string>
    <string name="meetingdoctors_medical_history_diseases_description">Esta es la lista de tus enfermedades, donde tanto tú como tu médico podéis añadir y modificar contenido. Procura mantenerla actualizada para agilizar las consultas con los médicos.</string>
    <string name="meetingdoctors_medical_history_disease_title">Enfermedad</string>
    <string name="meetingdoctors_medical_history_disease_name_hint">Nombre de la enfermedad*\n(ej.: hipertensión)</string>
    <string name="meetingdoctors_medical_history_disease_diagnosis_date">Fecha del diagnóstico</string>
    <string name="meetingdoctors_medical_history_disease_diagnosis_date_prefix">Diagnosticado el:</string>
    <string name="meetingdoctors_medical_history_disease_resolution_date">Fecha de resolución</string>
    <string name="meetingdoctors_medical_history_disease_resolution_date_prefix">Resuelto el:</string>
    <string name="meetingdoctors_medical_history_medications">Medicación</string>
    <string name="meetingdoctors_medical_history_add_medication_empty_info">Aún no has introducido\nningúna medicación</string>
    <string name="meetingdoctors_medical_history_add_medication_button">AÑADIR MEDICACIÓN</string>
    <string name="meetingdoctors_medical_history_medications_description">Esta es la lista de las medicinas que tomas actualmente, donde tanto tú como tu médico podéis añadir y modificar contenido. Procura mantenerla actualizada para agilizar las consultas con los médicos.</string>
    <string name="meetingdoctors_medical_history_medication_title">Medicación</string>
    <string name="meetingdoctors_medical_history_medication_name_hint">Nombre del medicamento*\n(ej.: paracetamol)</string>
    <string name="meetingdoctors_medical_history_medication_posology_hint">Posología* (ej.: 200 mg cada 8 horas)</string>
    <string name="meetingdoctors_medical_history_reports">Informes de tus videollamadas</string>
    <string name="meetingdoctors_medical_history_add_report_empty_info">Aún no tienes\nningún informe</string>
    <string name="meetingdoctors_medical_history_add_report_button">AÑADIR INFORME</string>
    <string name="meetingdoctors_medical_history_report_description">Esta es la lista de las informes generados por los médicos.</string>
    <string name="meetingdoctors_medical_history_report_date">Visita %1$s a las %2$s</string>
    <string name="meetingdoctors_medical_history_referrals">Derivaciones</string>
    <string name="meetingdoctors_medical_history_add_referral_empty_info">Aún no tienes\nningúna derivación</string>
    <string name="meetingdoctors_medical_history_referral_description">Esta es la lista de derivaciones generadas por los médicos.</string>
    <string name="meetingdoctors_medical_history_referral_type_title">Tipo:\u0020</string>
    <string name="meetingdoctors_medical_history_referral_doctor_title">Doctor:\u0020</string>
    <string name="meetingdoctors_medical_history_referral_date_title">Fecha:\u0020</string>
    <string name="meetingdoctors_medical_history_referral_date_undefined_error">Fecha no disponible</string>
    <string name="meetingdoctors_medical_history_referral_type_interconsultation">Interconsulta</string>
    <string name="meetingdoctors_medical_history_referral_type_diagnostic_procedures">Procedimiento de diagnóstico</string>
    <string name="meetingdoctors_medical_history_referral_type_therapeutical_procedures">Procedimiento terapéutico</string>
    <string name="meetingdoctors_medical_history_referral_type_undefined">n/a</string>
    <string name="meetingdoctors_medical_history_prescriptions">Mis recetas electrónicas</string>
    <string name="meetingdoctors_medical_history_prescriptions_medication_plan">Plan de medicación</string>
    <string name="meetingdoctors_medical_history_prescriptions_date">Actualizado: %1$s a las %2$s</string>
    <string name="meetingdoctors_medical_history_prescriptions_description">En este apartado podrás consultar tus recetas. Podrás visualizarlas pulsando sobre ellas o si lo prefieres descargarla para poder consultarla fuera de la app.</string>
    <string name="meetingdoctors_medical_history_prescriptions_download_success">Tu plan de medicación se ha descargado correctamente, lo encontrarás en la carpeta Descargas de tu dispositivo.</string>
    <string name="meetingdoctors_medical_history_prescriptions_download_error">No se ha podido descargar tu plan de medicación, vuelve a probarlo pasados unos minutos.</string>
    <string name="meetingdoctors_medical_history_prescription_empty">Aún no tienes una receta</string>
    <string name="meetingdoctors_medical_history_prescription_error">Ha habido un error al obtener tu receta, intentalo de nuevo más tarde.</string>
    <string name="meetingdoctors_medical_history_prescriptions_file_name">%1$s_plan de medicación.pdf</string>
    <string name="meetingdoctors_banned_dialog_title">Usuario Bloqueado</string>
    <string name="meetingdoctors_banned_dialog_body">Tu usuario ha sido bloqueado por inclumplimiento de los términos y condiciones del servicio. Para cualquier duda o reclamación envía un correo electrónico a info@meetingdoctors.com</string>
    <string name="meetingdoctors_banned_dialog_button">Aceptar</string>
    <string name="meetingdoctors_notification_channel_medical_chat">Chat Médico</string>
    <string name="nps_dialog_title" tools:ignore="MissingTranslation,ResourceName"><b>¡Tu Opinión nos importa!</b></string>
    <string name="nps_dialog_star_rate_question_title" tools:ignore="MissingTranslation,ResourceName">¿Recomendarías la App a un amigo?</string>
    <string name="nps_dialog_star_rate_question_detail" tools:ignore="MissingTranslation,ResourceName">El <b>0 significa muy improbable</b> y el <b>10 que la recomendaría seguro</b></string>
    <string name="nps_dialog_star_rate_bar_left_bound" tools:ignore="MissingTranslation,ResourceName">nunca la recomendaria</string>
</resources>