<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:theme="@style/MediQuoWhiteTheme">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meetingdoctors_medical_history_allergy_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:minLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/meetingdoctors_blue_dark"
                    android:text="@string/meetingdoctors_medical_history_allergy_severity"
                    android:clickable="false"
                    android:longClickable="false"/>
                <ImageView
                    android:id="@+id/severity_1"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/mediquo_circle_gray"/>
                <ImageView
                    android:id="@+id/severity_2"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/mediquo_circle_gray"/>
                <ImageView
                    android:id="@+id/severity_3"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/mediquo_circle_gray"/>
                <ImageView
                    android:id="@+id/severity_4"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/mediquo_circle_gray"/>
                <ImageView
                    android:id="@+id/severity_5"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/mediquo_circle_gray"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/meetingdoctors_medical_history_allergy_details_hint"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                app:counterOverflowTextAppearance="@style/AppTheme.EditTextError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="3"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_button"
                style="@style/meetingdoctors_button"
                android:layout_marginTop="30dp"
                tools:backgroundTint="@color/meetingdoctors_blue"
                android:text="@string/meetingdoctors_medical_history_delete" />

        </LinearLayout>

    </FrameLayout>
</ScrollView>