<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/meetingdoctors_medical_history_report_description"
        android:textSize="16sp"
        android:paddingBottom="32dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="44dp"
        android:textColor="@android:color/black" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/description"
        android:background="@color/meetingdoctors_platinum"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/separator"
        android:background="@android:color/white"
        android:divider="@color/meetingdoctors_soft_gray"
        android:dividerHeight="0.5dp"
        android:overScrollMode="never"
        android:visibility="gone">
    </ListView>

    <RelativeLayout
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/empty_layout_message"
            style="@style/MediQuoTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/meetingdoctors_medical_history_add_report_empty_info"
            android:textColor="@color/meetingdoctors_base_color"
            tools:textColor="@color/meetingdoctors_blue" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_button_empty"
            style="@style/meetingdoctors_button"
            android:layout_above="@id/add_button_empty"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp"
            android:text="@string/meetingdoctors_medical_history_add_report_button"
            android:visibility="gone"
            tools:backgroundTint="@color/meetingdoctors_blue" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/meetingdoctors_base_color"
        android:alpha="0.1"
        android:overScrollMode="never"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

</RelativeLayout>
