<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:theme="@style/MediQuoWhiteTheme">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center_horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meetingdoctors_medical_history_disease_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:minLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/meetingdoctors_medical_history_allergy_details_hint"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                app:counterOverflowTextAppearance="@style/AppTheme.EditTextError">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="3"/>

            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:id="@+id/diagnosis_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/diagnosis_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meetingdoctors_medical_history_disease_diagnosis_date"
                    android:clickable="false"
                    android:longClickable="false"
                    android:cursorVisible="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/diagnosis_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>

                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/down_blue_button"
                    android:clickable="false"
                    android:longClickable="false"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/resolution_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/resolution_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meetingdoctors_medical_history_disease_resolution_date"
                    android:clickable="false"
                    android:longClickable="false"
                    android:cursorVisible="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/resolution_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>

                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/down_blue_button"
                    android:clickable="false"
                    android:longClickable="false"/>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_button"
                style="@style/meetingdoctors_button"
                android:layout_marginTop="30dp"
                tools:backgroundTint="@color/meetingdoctors_blue"
                android:text="@string/meetingdoctors_medical_history_delete" />

        </LinearLayout>

    </FrameLayout>
</ScrollView>